--- a/src/tp6lab1/vistas/Menu.form
+++ b/src/tp6lab1/vistas/Menu.form
@@ -52,6 +52,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Supermercado &quot;DeTodo S.A.&quot;"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
